--- a/ExchangeRate/Base.lproj/Main.storyboard
+++ b/ExchangeRate/Base.lproj/Main.storyboard
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="14B17" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="14B23" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="dZr-rE-7lA">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Currency calculator-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
                 <viewController id="vXZ-lx-hvc" customClass="ViewController" customModule="ExchangeRate" customModuleProvider="target" sceneMemberID="viewController">
@@ -16,24 +16,51 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ncP-ek-JIF">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Type in here" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ncP-ek-JIF">
                                 <rect key="frame" x="0.0" y="-30" width="97" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" keyboardType="decimalPad" enablesReturnKeyAutomatically="YES"/>
-                                <variation key="widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="16" y="131" width="195" height="30"/>
+                                <variation key="widthClass=compact" ambiguous="YES" misplaced="YES">
+                                    <rect key="frame" x="16" y="148" width="174" height="30"/>
                                 </variation>
                             </textField>
                             <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="afD-Gx-PQx">
                                 <rect key="frame" x="0.0" y="-162" width="320" height="162"/>
-                                <variation key="widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="0.0" y="203" width="211" height="162"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="140" id="0zD-2l-4U6"/>
+                                    <constraint firstAttribute="height" constant="160" id="T7C-Kb-GbK"/>
+                                </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="0zD-2l-4U6"/>
+                                        <exclude reference="T7C-Kb-GbK"/>
+                                    </mask>
+                                </variation>
+                                <variation key="widthClass=compact">
+                                    <mask key="constraints">
+                                        <include reference="0zD-2l-4U6"/>
+                                        <include reference="T7C-Kb-GbK"/>
+                                    </mask>
                                 </variation>
                             </pickerView>
                             <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DBa-As-uS2">
                                 <rect key="frame" x="0.0" y="-162" width="320" height="162"/>
-                                <variation key="widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="189" y="203" width="211" height="162"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="160" id="Pav-hJ-Wn4"/>
+                                    <constraint firstAttribute="width" constant="140" id="d3m-rL-LQu"/>
+                                </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="Pav-hJ-Wn4"/>
+                                        <exclude reference="d3m-rL-LQu"/>
+                                    </mask>
+                                </variation>
+                                <variation key="widthClass=compact" ambiguous="YES" misplaced="YES">
+                                    <rect key="frame" x="219" y="203" width="181" height="162"/>
+                                    <mask key="constraints">
+                                        <include reference="Pav-hJ-Wn4"/>
+                                        <include reference="d3m-rL-LQu"/>
+                                    </mask>
                                 </variation>
                             </pickerView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JGX-jc-EVt">
@@ -41,25 +68,46 @@
                                 <state key="normal" title="Convert">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
-                                <variation key="widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="177" y="407" width="55" height="30"/>
+                                <variation key="widthClass=compact" misplaced="YES">
+                                    <rect key="frame" x="172" y="430" width="55" height="30"/>
                                 </variation>
                                 <connections>
                                     <action selector="convertButton:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="Zhr-wr-r82"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lsz-wD-70g">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="???" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lsz-wD-70g">
                                 <rect key="frame" x="0.0" y="-21" width="42" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
-                                <variation key="widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="219" y="135" width="165" height="21"/>
+                                <variation key="widthClass=compact" ambiguous="YES" misplaced="YES">
+                                    <rect key="frame" x="210" y="148" width="174" height="29.5"/>
                                 </variation>
                             </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <gestureRecognizers/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="Lsz-wD-70g" secondAttribute="trailing" constant="16" id="3jr-4z-2Wb"/>
+                            <constraint firstItem="Lsz-wD-70g" firstAttribute="width" secondItem="ncP-ek-JIF" secondAttribute="width" id="6LA-mj-TdH"/>
+                            <constraint firstItem="Lsz-wD-70g" firstAttribute="leading" secondItem="ncP-ek-JIF" secondAttribute="trailing" constant="20" id="7Gr-S4-WSU"/>
+                            <constraint firstItem="DBa-As-uS2" firstAttribute="top" relation="greaterThanOrEqual" secondItem="Lsz-wD-70g" secondAttribute="bottom" constant="42" id="AXq-gE-Q4F"/>
+                            <constraint firstAttribute="centerY" secondItem="afD-Gx-PQx" secondAttribute="centerY" id="At4-xu-4kR"/>
+                            <constraint firstItem="DBa-As-uS2" firstAttribute="leading" relation="lessThanOrEqual" secondItem="afD-Gx-PQx" secondAttribute="trailing" constant="40" id="VNf-b7-t7z"/>
+                            <constraint firstAttribute="trailing" relation="lessThanOrEqual" secondItem="DBa-As-uS2" secondAttribute="trailing" constant="10" id="WqQ-Wt-SOw"/>
+                            <constraint firstItem="DBa-As-uS2" firstAttribute="height" secondItem="afD-Gx-PQx" secondAttribute="height" id="Z3o-XO-t7s"/>
+                            <constraint firstItem="Lsz-wD-70g" firstAttribute="top" relation="lessThanOrEqual" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="80" id="d53-M8-cNA"/>
+                            <constraint firstItem="ncP-ek-JIF" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" constant="16" id="gv4-oj-7IB"/>
+                            <constraint firstItem="DBa-As-uS2" firstAttribute="width" secondItem="afD-Gx-PQx" secondAttribute="width" id="hf5-ii-Oqo"/>
+                            <constraint firstAttribute="centerY" secondItem="DBa-As-uS2" secondAttribute="centerY" id="hzt-Ub-QGe"/>
+                            <constraint firstItem="DBa-As-uS2" firstAttribute="leading" secondItem="afD-Gx-PQx" secondAttribute="trailing" constant="40" id="jhN-XY-klA"/>
+                            <constraint firstItem="ncP-ek-JIF" firstAttribute="top" relation="lessThanOrEqual" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="80" id="lIZ-JS-knT"/>
+                            <constraint firstItem="afD-Gx-PQx" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" constant="10" id="lOB-e7-VKh"/>
+                            <constraint firstItem="JGX-jc-EVt" firstAttribute="top" secondItem="DBa-As-uS2" secondAttribute="bottom" constant="40" id="sQj-FY-b3g"/>
+                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" relation="lessThanOrEqual" secondItem="JGX-jc-EVt" secondAttribute="bottom" constant="140" id="uJk-OI-e0E"/>
+                            <constraint firstAttribute="centerX" secondItem="JGX-jc-EVt" secondAttribute="centerX" id="w9q-Mu-4Ps"/>
+                            <constraint firstItem="afD-Gx-PQx" firstAttribute="top" relation="greaterThanOrEqual" secondItem="ncP-ek-JIF" secondAttribute="bottom" constant="42" id="wZw-xC-sEQ"/>
+                        </constraints>
                         <variation key="default">
                             <mask key="subviews">
                                 <exclude reference="ncP-ek-JIF"/>
@@ -67,6 +115,27 @@
                                 <exclude reference="DBa-As-uS2"/>
                                 <exclude reference="JGX-jc-EVt"/>
                                 <exclude reference="Lsz-wD-70g"/>
+                            </mask>
+                            <mask key="constraints">
+                                <exclude reference="gv4-oj-7IB"/>
+                                <exclude reference="lIZ-JS-knT"/>
+                                <exclude reference="At4-xu-4kR"/>
+                                <exclude reference="lOB-e7-VKh"/>
+                                <exclude reference="wZw-xC-sEQ"/>
+                                <exclude reference="3jr-4z-2Wb"/>
+                                <exclude reference="6LA-mj-TdH"/>
+                                <exclude reference="7Gr-S4-WSU"/>
+                                <exclude reference="d53-M8-cNA"/>
+                                <exclude reference="AXq-gE-Q4F"/>
+                                <exclude reference="VNf-b7-t7z"/>
+                                <exclude reference="WqQ-Wt-SOw"/>
+                                <exclude reference="Z3o-XO-t7s"/>
+                                <exclude reference="hf5-ii-Oqo"/>
+                                <exclude reference="hzt-Ub-QGe"/>
+                                <exclude reference="jhN-XY-klA"/>
+                                <exclude reference="sQj-FY-b3g"/>
+                                <exclude reference="w9q-Mu-4Ps"/>
+                                <exclude reference="uJk-OI-e0E"/>
                             </mask>
                         </variation>
                         <variation key="widthClass=compact">
@@ -77,11 +146,39 @@
                                 <include reference="JGX-jc-EVt"/>
                                 <include reference="Lsz-wD-70g"/>
                             </mask>
+                            <mask key="constraints">
+                                <include reference="gv4-oj-7IB"/>
+                                <include reference="lIZ-JS-knT"/>
+                                <include reference="At4-xu-4kR"/>
+                                <include reference="lOB-e7-VKh"/>
+                                <include reference="wZw-xC-sEQ"/>
+                                <include reference="3jr-4z-2Wb"/>
+                                <include reference="6LA-mj-TdH"/>
+                                <include reference="7Gr-S4-WSU"/>
+                                <include reference="d53-M8-cNA"/>
+                                <include reference="AXq-gE-Q4F"/>
+                                <include reference="VNf-b7-t7z"/>
+                                <include reference="WqQ-Wt-SOw"/>
+                                <include reference="Z3o-XO-t7s"/>
+                                <include reference="hf5-ii-Oqo"/>
+                                <include reference="hzt-Ub-QGe"/>
+                                <exclude reference="jhN-XY-klA"/>
+                                <include reference="sQj-FY-b3g"/>
+                                <include reference="w9q-Mu-4Ps"/>
+                                <exclude reference="uJk-OI-e0E"/>
+                            </mask>
                         </variation>
                         <connections>
                             <outletCollection property="gestureRecognizers" destination="dnz-cp-cLr" appends="YES" id="J74-ar-X4t"/>
                         </connections>
                     </view>
+                    <navigationItem key="navigationItem" title="Currency calculator" id="cCi-jq-FHe">
+                        <barButtonItem key="rightBarButtonItem" title="Refresh" id="fgP-y9-vCG">
+                            <connections>
+                                <action selector="refreshButton:" destination="vXZ-lx-hvc" id="CyO-mg-2ym"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="convertedValue" destination="Lsz-wD-70g" id="oVp-ta-DGr"/>
                         <outlet property="picker1" destination="afD-Gx-PQx" id="8uf-rJ-DpV"/>
@@ -95,6 +192,24 @@
                         <action selector="tapped:" destination="vXZ-lx-hvc" id="Vqi-Ow-rR5"/>
                     </connections>
                 </tapGestureRecognizer>
+            </objects>
+            <point key="canvasLocation" x="1056" y="387.5"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="cAa-Lj-KQf">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="dZr-rE-7lA" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Qua-04-2S3">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="vXZ-lx-hvc" kind="relationship" relationship="rootViewController" id="1Y4-Gw-OAL"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="FAf-wS-VH8" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="138" y="387"/>
         </scene>
