--- a/ExchangeRate/Base.lproj/Main.storyboard
+++ b/ExchangeRate/Base.lproj/Main.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="14B23" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="dZr-rE-7lA">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="dZr-rE-7lA">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6246"/>
     </dependencies>
     <scenes>
         <!--Currency calculator-->
@@ -93,7 +93,7 @@
                         </connections>
                     </view>
                     <navigationItem key="navigationItem" title="Currency calculator" id="cCi-jq-FHe">
-                        <barButtonItem key="rightBarButtonItem" title="Refresh" id="fgP-y9-vCG">
+                        <barButtonItem key="rightBarButtonItem" title="Update schedule" id="fgP-y9-vCG">
                             <connections>
                                 <action selector="refreshButton:" destination="vXZ-lx-hvc" id="KkP-ze-ua5"/>
                             </connections>
